--- a/My_Theme_Collection/NewBNHA.theme.css
+++ b/My_Theme_Collection/NewBNHA.theme.css
@@ -2,7 +2,7 @@
  * @name New BNHA Theme
  * @author ShadowDevilsAvenged
  * @description Newer BNHA theme for my return
- * @version 1.3
+ * @version 1.4
  */
 
 /* Main Background */
@@ -1803,6 +1803,7 @@
 }
 
 .container-3XgAHv, .container-18GwIk {
+    background-attachment: fixed;
     background-image: -webkit-radial-gradient(50% 50%, ellipse cover, #22a9bb 0%, #000000 95%);
 }
 
@@ -2249,7 +2250,232 @@
     height: 450px;
 }
 
+.textBadge-1fdDPJ[style*="background-color:"] {
+    background-color: #2AB !important;
+    border-radius: 4px;
+}
 
+/* Active Post */
+.theme-dark .container-3wLKDe {
+    background-color: transparent;
+}
+.dots-2_b2Mn {
+    background-color: #2AB;
+    border: 3px solid transparent;
+}
+.numberBadge-37OJ3S[style*="background-color:"] {
+    background-color: #2AB !important;
+}
+.container-2qVG6q:hover {
+    background-color: rgba(17, 187, 204, .4);
+    border-color: #1BC;
+    box-shadow: none;
+}
+.dots-1BwzZQ.themed-3T-OPr {
+    color: white;
+}
+.interactiveCard-2iMtdk.selected-sszUNx, 
+.interactiveCard-2iMtdk:active, .interactiveCard-2iMtdk:hover {
+    border: 2px solid black;
+}
+.reactionTooltipText-3OhRFp a {
+    color: gold;
+}
+/* Active Post Boxes */
+.mainCard-3KBsBI {
+    background-color: rgba(34, 170, 187, .6);
+    border: 2px solid transparent;
+    border-radius: 5px;
+}
+.header-1Uy0p6:hover:not(.headerBorder-jrk0Ic) {
+    border: 2px solid #1BC;
+}
+.chat-25x62K:before {
+    box-shadow: none;
+}
+.container-2qVG6q.isOpen-2OXbFs {
+    background-color: rgba(34, 170, 187, .8);
+}
+.headerBorder-jrk0Ic {
+    box-shadow: none;
+}
+/* Getting rid of the input background */
+.mainCard-3KBsBI .input-2g-os5 {
+    background-color: transparent;
+    border: none;
+}
+/* Tag Holder */
+.container-2IhveL {
+    background-color: rgba(34, 170, 187, .5);
+    border-radius: 6px;
+}
+/* Tags */
+.pill-3pRQlO {
+    border-radius: 6px;
+    background-color: rgba(34, 170, 187, .5);
+    border: 2px solid transparent;
+}
+.pill-3pRQlO.clickable-3YTfAq:not(.disabled-3Rezaw):hover {
+    background-color: rgba(17, 187, 204, .5);
+}
+.pill-3pRQlO.selected-24z1Ou {
+    border-color: #1BC;
+}
+/* Title of Post */
+.heading-lg-medium-3gUJeM[style*="color:"] {
+    color: white !important;
+}
+/* Newest Reactions */
+#app-mount .reactionCount-SWXh9W {
+    color: white;
+}
+.reaction-102jx9 {
+    border-radius: 7px;
+    background: rgba(0,0,0,.4);
+    border: 1px solid transparent;
+}
+.reaction-102jx9:hover {
+    background-color: #2AB;
+    border-color: #1BC;
+}
+.reaction-102jx9.reactionMe-2zhiyZ {
+    background-color: #2AB;
+    border-color: white;
+    border-style: ridge;
+}
+.newMessageCount-jqlY9z[style*="color:"] {
+    color: gold !important;
+}
+/* Megathread Stuff */
+.header-1RJoTb {
+    box-shadow: none;
+    border-top-color: transparent;
+}
+.container-3YcgdM {
+    background-color: rgba(0, 0, 0, .3);
+}
+.addReactButton-3bSQb6, .buttonInner-3aRbcx {
+    color: silver;
+    background-color: rgba(34, 170, 187, .4);
+    border-radius: 4px;
+    border: 2px solid transparent;
+}
+.addReactButton-3bSQb6:hover, .buttonInner-3aRbcx:hover {
+    background-color: rgba(17, 187, 204, .4);
+    border-color: #1BC;
+}
+.sectionDivider-189lqb {
+    background-color: transparent;
+}
+/* Home Channel List Tab */
+/* Home Channel List Background */
+.theme-dark .background-fkKrXt {
+    background-color: transparent;
+}
+/* When Typing */
+.typingIndicator-KF8hGa {
+    background-color: #2AB;
+}
+/* Server Boxes */
+.container-2Hi7Km, .container-xwOzwi {
+    background-color: rgba(34, 170, 187, .5);
+}
+/* Current Server Icon */
+.icon-2IDTxf {
+    background-color: transparent;
+    border: none;
+}
+.container-xwOzwi, .container-2Hi7Km {
+    border-radius: 4px;
+}
+/* Channel Feeds */
+.feedItemHeader-txJq98 {
+    border-bottom: none;
+}
+.interactiveCard-2iMtdk {
+    border: 2px solid #2AB;
+    box-shadow: none;
+}
+.card-3x20HF {
+    border-radius: 4px;
+    background-color: rgba(34, 170, 187, .4);
+}
+.loadingCard-3pIp9h {
+    background-color: rgba(0, 0, 0, .24);
+}
+.iconWrapper-3FqQ75 {
+    border-radius: 5px;
+    background-color: #2AB;
+}
+.icon-3gfzEo {
+    color: var(--header-primary);
+}
+.iconContainer-2R-3M1 {
+    border-radius: 5px;
+    background-color: #2AB;
+    color: white;
+}
+.container-3HMTms {
+    border-radius: 4px;
+}
+.container-3HMTms:hover {
+    background-color: rgba(0, 0, 0, .2);
+}
+/* Active Thread List */
+.header-3cSJjT {
+    background-color: transparent;
+}
+.container-3GP6AV {
+    background-color: transparent;
+    border-radius: 8px;
+}
+/* More Active Threads Box */
+.popout-TdhJ6Z {
+    background-color: black;
+}
+.more-2c3Z-T {
+    border-top: none;
+    color: gold;
+}
+.root-g14mjS.modal-ZdazA8 {
+    background-attachment: fixed;
+    background-image: -webkit-radial-gradient(50% 50%, ellipse cover, #22a9bb 0%, #000000 95%);
+}
+
+.icon-2Zyj6B {
+	background-color: #2AB;
+	border-radius: 5px;
+}
+
+.reactionBtn-3I19bq.forceShowLook-1zmTr- {
+    background-color: rgba(34, 170, 187, .4);
+    border-radius: 4px;
+    border: 2px solid transparent;
+}
+
+.reactionBtn-3I19bq.forceShowLook-1zmTr-:hover {
+    background-color: rgba(17, 187, 204, .4);
+    border-color: #1BC;
+}
+
+.icon-1q31jb,
+.reactionBtn-3I19bq {
+	color: white !important;
+}
+
+.row-1qtctT:hover {
+	background-color: #2AB;
+	color: white;
+}
+
+.row-1qtctT {
+	border-radius: 4px;
+	color: white;
+}
+
+.emptyStateContainer-xWOMPJ {
+	background-color: transparent;
+}
 
 /* Main Color */
 .main-color{color: #2AB;}
