--- a/My_Theme_Collection/NewRemTheme.theme.css
+++ b/My_Theme_Collection/NewRemTheme.theme.css
@@ -2,7 +2,7 @@
  * @name New Rem Theme
  * @author ShadowDevilsAvenged
  * @description Newer Rem theme for my return
- * @version 1.3
+ * @version 1.4
  */
 
  .app-2CXKsg {
@@ -604,6 +604,7 @@
 .container-18GwIk {
     background-image: -webkit-repeating-linear-gradient(-48deg, #000000 30%, #1a1a1a 35%);
     border-radius: 4px;
+    background-attachment: fixed;
 }
 
 .browser-mnQ1T7 {
@@ -2372,10 +2373,230 @@
   color: white !important;
 }
 
+.textBadge-1fdDPJ[style*="background-color:"] {
+    background-color: #61A5D8 !important;
+    border-radius: 4px;
+}
 
+/* Active Post */
+.theme-dark .container-3wLKDe {
+    background-color: transparent;
+}
+.dots-2_b2Mn {
+    background-color: #61A5D8;
+    border: 3px solid transparent;
+}
+.container-2qVG6q:hover {
+    background-color: rgba(118, 170, 217, .4);
+    border-color: #76AAD9;
+    box-shadow: none;
+}
+.dots-1BwzZQ.themed-3T-OPr {
+    color: var(--text-normal);
+}
+.reactionTooltipText-3OhRFp a {
+    color: gold;
+}
+.interactiveCard-2iMtdk.selected-sszUNx, 
+.interactiveCard-2iMtdk:active, .interactiveCard-2iMtdk:hover {
+    border: 2px solid black;
+}
+/* Active Post Boxes */
+.mainCard-3KBsBI {
+    background-color: rgba(97, 165, 216, .4);
+    border: 2px solid transparent;
+    border-radius: 5px;
+}
+.chat-25x62K:before {
+    box-shadow: none;
+}
+.header-1Uy0p6:hover:not(.headerBorder-jrk0Ic) {
+    border: 2px solid #76AAD9;
+}
+.container-2qVG6q.isOpen-2OXbFs {
+    background-color: rgba(97, 165, 216, .7);
+    -webkit-transform: none;
+    transform: none;
+}
+.headerBorder-jrk0Ic {
+    box-shadow: none;
+}
+/* Getting rid of the input background */
+.mainCard-3KBsBI .input-2g-os5 {
+    background-color: transparent;
+}
+/* Tag Holder */
+.container-2IhveL {
+    background-color: rgba(97, 165, 216, .5);
+    border-radius: 5px;
+}
+/* Tags */
+.pill-3pRQlO {
+    border-radius: 5px;
+    background-color: rgba(97, 165, 216, .5);
+    border: 2px solid transparent;
+}
+.pill-3pRQlO.clickable-3YTfAq:not(.disabled-3Rezaw):hover {
+    background-color: rgba(118, 170, 217, .5);
+}
+.pill-3pRQlO.selected-24z1Ou {
+    border-color: #76AAD9;
+}
+/* Title of Post */
+.heading-lg-medium-3gUJeM[style*="color:"] {
+    color: white !important;
+}
+/* Newest Reactions */
+#app-mount .reactionCount-SWXh9W {
+    color: white;
+}
+.reaction-102jx9 {
+    border-radius: 7px;
+    background: rgba(0,0,0,.25);
+    border: 3px solid #242424;
+}
+.reaction-102jx9:hover {
+    background-color: rgba(0,0,0,.55);
+    border: 3px outset #242424;
+}
+.reaction-102jx9.reactionMe-2zhiyZ {
+    background: rgba(97, 164, 216, .48);
+    border: 3px inset #61a5d8;
+}
+.newMessageCount-jqlY9z[style*="color:"] {
+    color: gold !important;
+}
+/* Megathread Stuff */
+.header-1RJoTb {
+    box-shadow: none;
+    border-top-color: transparent;
+}
+.container-3YcgdM {
+    background-color: rgba(0, 0, 0, .3);
+}
+.addReactButton-3bSQb6, .buttonInner-3aRbcx {
+    color: silver;
+    border-radius: 5px;
+    background-color: rgba(97, 165, 216, .5);
+    border: 2px solid transparent;
+}
+.addReactButton-3bSQb6:hover, .buttonInner-3aRbcx:hover {
+    background-color: rgba(118, 170, 217, .5);
+    border-color: #76AAD9;
+}
+.sectionDivider-189lqb {
+    background-color: transparent;
+}
+/* Home Channel List Tab */
+/* Home Channel List Background */
+.theme-dark .background-fkKrXt {
+    background-color: transparent;
+}
+/* When Typing */
+.typingIndicator-KF8hGa {
+    background-color: #61A5D8;
+}
+/* Server Boxes */
+.container-2Hi7Km, .container-xwOzwi {
+    background-color: rgba(97, 165, 216, .4);
+}
+/* Current Server Icon */
+.icon-2IDTxf {
+    background-color: transparent;
+    border: 4px solid transparent;
+}
+.container-xwOzwi, .container-2Hi7Km {
+    border-radius: 4px;
+}
+/* Channel Feeds */
+.feedItemHeader-txJq98 {
+    border-bottom: none;
+}
+.interactiveCard-2iMtdk {
+    border: 2px solid #61A5D8;
+    box-shadow: none;
+}
+.card-3x20HF {
+    border-radius: 5px;
+    background-color: rgba(97, 165, 216, .4);
+}
+.loadingCard-3pIp9h {
+    background-color: rgba(0, 0, 0, .24);
+}
+.iconWrapper-3FqQ75 {
+    border-radius: 5px;
+    background-color: #61A5D8;
+}
+.icon-3gfzEo {
+    color: var(--header-primary);
+}
+.iconContainer-2R-3M1 {
+    border-radius: 5px;
+    background-color: #61A5D8;
+    color: white;
+}
+.container-3HMTms {
+    border-radius: 4px;
+}
+.container-3HMTms:hover {
+    background-color: rgba(0, 0, 0, .1);
+}
+/* Active Thread List */
+.header-3cSJjT {
+    background-color: transparent;
+}
+.container-3GP6AV {
+    background-color: transparent;
+    border-radius: 8px;
+}
+/* More Active Threads Box */
+.popout-TdhJ6Z {
+    background-color: black;
+}
+.more-2c3Z-T {
+    border-top: none;
+    color: gold;
+}
+.root-g14mjS.modal-ZdazA8 {
+    background-attachment: fixed;
+    background-image: -webkit-repeating-linear-gradient(-48deg, #000000 30%, #1a1a1a 35%);
+    border-radius: 4px;
+}
 
+.icon-2Zyj6B {
+	background-color: #61A5D8;
+	border-radius: 5px;
+}
 
+.reactionBtn-3I19bq.forceShowLook-1zmTr- {
+    border-radius: 5px;
+    background-color: rgba(97, 165, 216, .5);
+    border: 2px solid transparent;
+}
 
+.reactionBtn-3I19bq.forceShowLook-1zmTr-:hover {
+    background-color: rgba(118, 170, 217, .5);
+    border-color: #76AAD9;
+}
+
+.icon-1q31jb,
+.reactionBtn-3I19bq {
+	color: white !important;
+}
+
+.row-1qtctT:hover {
+	background-color: #61A5D8;
+	color: white;
+}
+
+.row-1qtctT {
+	border-radius: 4px;
+	color: white;
+}
+
+.emptyStateContainer-xWOMPJ {
+	background-color: transparent;
+}
 
 /* Main Color */
 .main-color {color: #61A5D8;}
