--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old-Akame_Ga_Kill-Theme
  * @author ShadowDevilsAvenged
  * @description Akame from Akame No Kill
- * @version 1.3
+ * @version 1.4
  */
 
  #app-mount .app-2CXKsg {
@@ -2940,4 +2940,221 @@
 .theme-dark .root-g14mjS.uploadModal-2ie9O_ {
   width: 650px;
   height: 450px;
+}
+
+/* Active Post */
+.theme-dark .container-3wLKDe {
+  background-color: transparent;
+}
+.dots-2_b2Mn {
+  background-color: #9b2742;
+  border: 3px solid transparent;
+}
+.container-2qVG6q:hover {
+  background-color: rgba(173, 57, 80, .4);
+  border-color: #ad3950;
+  box-shadow: none;
+}
+.reactionTooltipText-3OhRFp a {
+  color: gold;
+}
+.dots-1BwzZQ.themed-3T-OPr {
+  color: white;
+}
+/* Active Post Boxes */
+.mainCard-3KBsBI {
+  background-color: rgba(155, 39, 66, .4);
+  border: 2px solid transparent;
+  border-radius: 5px;
+}
+.header-1Uy0p6:hover:not(.headerBorder-jrk0Ic) {
+  border: 2px solid #ad3950;
+}
+.chat-25x62K:before {
+  box-shadow: none;
+}
+.interactiveCard-2iMtdk.selected-sszUNx, 
+.interactiveCard-2iMtdk:active, .interactiveCard-2iMtdk:hover {
+    border: 2px solid black;
+}
+.container-2qVG6q.isOpen-2OXbFs {
+  background-color: rgba(155, 39, 66, .7);
+  -webkit-transform: none;
+  transform: none;
+}
+.headerBorder-jrk0Ic {
+  box-shadow: none;
+}
+/* Getting rid of the input background */
+.mainCard-3KBsBI .input-2g-os5 {
+  background-color: transparent;
+}
+/* Tag Holder */
+.container-2IhveL {
+  background-color: rgba(155, 39, 66, .4);
+  border-radius: 5px;
+}
+/* Tags */
+.pill-3pRQlO {
+  border-radius: 5px;
+  background-color: rgba(155, 39, 66, .4);
+  border: 2px solid transparent;
+}
+.pill-3pRQlO.clickable-3YTfAq:not(.disabled-3Rezaw):hover {
+  background-color: rgba(173, 57, 80, .4);
+}
+.pill-3pRQlO.selected-24z1Ou {
+  border-color: #ad3950;
+}
+/* Title of Post */
+.heading-lg-medium-3gUJeM[style*="color:"] {
+  color: white !important;
+}
+/* Newest Reactions */
+#app-mount .reactionCount-SWXh9W {
+  color: white;
+}
+.reaction-102jx9 {
+  border-radius: 4px;
+  background-color: rgba(155, 39, 66, .6);
+}
+.reaction-102jx9:hover {
+  background-color: rgba(155, 39, 66, .9);
+  border-color: transparent;
+}
+.reaction-102jx9.reactionMe-2zhiyZ {
+  background-color: rgba(155, 39, 66, .3);
+  border-color: #ad3950;
+}
+.newMessageCount-jqlY9z[style*="color:"] {
+  color: gold !important;
+}
+/* Megathread Stuff */
+.header-1RJoTb {
+  box-shadow: none;
+  border-top-color: transparent;
+}
+.container-3YcgdM {
+  background-color: rgba(0, 0, 0, .3);
+}
+.addReactButton-3bSQb6, .buttonInner-3aRbcx {
+  color: silver;
+  background-color: rgba(155, 39, 66, .4);
+  border-radius: 4px;
+  border: 2px solid transparent;
+}
+.addReactButton-3bSQb6:hover, .buttonInner-3aRbcx:hover {
+  background-color: rgba(173, 57, 80, .4);
+  border-color: #ad3950;
+}
+.sectionDivider-189lqb {
+  background-color: transparent;
+}
+/* Home Channel List Tab */
+/* Home Channel List Background */
+.theme-dark .background-fkKrXt {
+  background-color: transparent;
+}
+/* When Typing */
+.typingIndicator-KF8hGa {
+  background-color: #9b2742;
+}
+/* Server Boxes */
+.container-2Hi7Km, .container-xwOzwi {
+  background-color: rgba(155, 39, 66, .6);
+}
+/* Current Server Icon */
+.icon-2IDTxf {
+  background-color: transparent;
+  border: 4px solid transparent;
+}
+.container-xwOzwi, .container-2Hi7Km {
+  border-radius: 4px;
+}
+/* Channel Feeds */
+.feedItemHeader-txJq98 {
+  border-bottom: none;
+}
+.interactiveCard-2iMtdk {
+  border: 2px solid #9b2742;
+  box-shadow: none;
+}
+.card-3x20HF {
+  border-radius: 4px;
+  background-color: rgba(155, 39, 66, .4);
+}
+.loadingCard-3pIp9h {
+  background-color: rgba(0, 0, 0, .24);
+}
+.iconWrapper-3FqQ75 {
+  border-radius: 5px;
+  background-color: #9b2742;
+}
+.icon-3gfzEo {
+  color: var(--header-primary);
+}
+.iconContainer-2R-3M1 {
+  border-radius: 5px;
+  background-color: #9b2742;
+  color: white;
+}
+.container-3HMTms {
+  border-radius: 4px;
+}
+.container-3HMTms:hover {
+  background-color: rgba(0, 0, 0, .2);
+}
+/* Active Thread List */
+.header-3cSJjT {
+  background-color: transparent;
+}
+.container-3GP6AV {
+  background-color: transparent;
+  border-radius: 8px;
+}
+/* More Active Threads Box */
+.popout-TdhJ6Z {
+  background-color: black;
+}
+.more-2c3Z-T {
+  border-top: none;
+  color: gold;
+}
+.root-g14mjS.modal-ZdazA8 {
+  background-color: #380d0d !important;
+}
+
+.icon-2Zyj6B {
+	background-color: #9b2742;
+	border-radius: 5px;
+}
+
+.reactionBtn-3I19bq.forceShowLook-1zmTr- {
+  background-color: rgba(155, 39, 66, .4);
+  border-radius: 4px;
+  border: 2px solid transparent;
+}
+
+.reactionBtn-3I19bq.forceShowLook-1zmTr-:hover {
+  background-color: rgba(173, 57, 80, .4);
+  border-color: #ad3950;
+}
+
+.icon-1q31jb,
+.reactionBtn-3I19bq {
+	color: white !important;
+}
+
+.row-1qtctT:hover {
+	background-color: #9b2742;
+	color: white;
+}
+
+.row-1qtctT {
+	border-radius: 4px;
+	color: white;
+}
+
+.emptyStateContainer-xWOMPJ {
+	background-color: transparent;
 }
