--- a/My_Theme_Collection/Old-BNHA-Theme.theme.css
+++ b/My_Theme_Collection/Old-BNHA-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old BNHA Theme Returns
  * @author ShadowDevilsAvenged
  * @description Say Hello to the BNHA theme once again
- * @version 1.3
+ * @version 1.4
  */
 
  @import url("https://fonts.googleapis.com/css?family=Livvic&display=swap");
@@ -2334,4 +2334,240 @@
     right: 203px;
     bottom: -294px;
     margin-top: -2px !important;
+}
+
+.textBadge-1fdDPJ[style*="background-color:"] {
+    background-color: #008c99 !important;
+    border-radius: 4px;
+}
+
+/* Active Post */
+.theme-dark .container-3wLKDe {
+    background-color: transparent;
+}
+.dots-2_b2Mn {
+    background-color: #008c99;
+    border: 3px solid transparent;
+}
+.container-2qVG6q:hover {
+    background-color: rgba(0, 140, 153, .5);
+    border-color: #008c99;
+    box-shadow: none;
+}
+.reactionTooltipText-3OhRFp a {
+    color: gold;
+}
+.dots-1BwzZQ.themed-3T-OPr {
+    color: white;
+}
+/* Active Post Boxes */
+.mainCard-3KBsBI {
+    background-color: rgba(0, 140, 153, .2);
+    border: 1px solid transparent;
+    border-radius: 5px;
+}
+.interactiveCard-2iMtdk.selected-sszUNx, 
+.interactiveCard-2iMtdk:active, .interactiveCard-2iMtdk:hover {
+    border: 2px solid black;
+}
+
+.chat-25x62K:before {
+    box-shadow: none;
+}
+.header-1Uy0p6:hover:not(.headerBorder-jrk0Ic) {
+    border: 2px solid #008c99;
+}
+.container-2qVG6q.isOpen-2OXbFs {
+    background-color: rgba(0, 140, 153, .8);
+}
+.headerBorder-jrk0Ic {
+    box-shadow: none;
+}
+/* Getting rid of the input background */
+.mainCard-3KBsBI .input-2g-os5 {
+    background-color: transparent;
+}
+/* Tag Holder */
+.container-2IhveL {
+    background-color: rgba(0, 140, 153, .3);
+    border-radius: 5px;
+}
+/* Tags */
+.pill-3pRQlO {
+    border-radius: 5px;
+    background-color: #008c99;
+    border: 2px solid transparent;
+}
+.pill-3pRQlO.clickable-3YTfAq:not(.disabled-3Rezaw):hover {
+    background-color: rgba(0, 140, 153, .7);
+}
+.pill-3pRQlO.selected-24z1Ou {
+    border-color: #008c99;
+}
+/* Title of Post */
+.heading-lg-medium-3gUJeM[style*="color:"] {
+    color: white !important;
+}
+/* Newest Reactions */
+#app-mount .reactionCount-SWXh9W {
+    color: white;
+}
+.reaction-102jx9 {
+    background: rgba(0, 0, 0, 0.42);
+}
+.reaction-102jx9:hover {
+    background-color: #11646b;
+    border-color: transparent;
+}
+.reaction-102jx9.reactionMe-2zhiyZ {
+    background-color: rgb(0, 140, 153, 0.154);
+    border: 2px solid #008c99;
+}
+.newMessageCount-jqlY9z[style*="color:"] {
+    color: gold !important;
+}
+/* Megathread Stuff */
+.header-1RJoTb {
+    box-shadow: none;
+    border-top-color: transparent;
+}
+.container-3YcgdM {
+    background-color: rgba(0, 0, 0, .3);
+}
+.addReactButton-3bSQb6, .buttonInner-3aRbcx {
+    color: silver;
+    border-radius: 5px;
+    background-color: #008c99;
+    border: 2px solid transparent;
+}
+.addReactButton-3bSQb6:hover, .buttonInner-3aRbcx:hover {
+    background-color: rgba(0, 140, 153, .7);
+    border-color: #008c99;
+}
+.sectionDivider-189lqb {
+    background-color: transparent;
+}
+.textBadge-1fdDPJ[style*="background-color:"] {
+    background-color: #008c99 !important;
+    border-radius: 4px;
+}
+/* Home Channel List Tab */
+/* Home Channel List Background */
+.theme-dark .background-fkKrXt {
+    background-color: transparent;
+}
+/* When Typing */
+.typingIndicator-KF8hGa {
+    background-color: #008c99;
+}
+/* Server Boxes */
+.container-2Hi7Km, .container-xwOzwi {
+    background-color: rgba(0, 140, 153, .4);
+}
+/* Current Server Icon */
+.icon-2IDTxf {
+    background-color: transparent;
+    border: 4px solid transparent;
+}
+.container-xwOzwi, .container-2Hi7Km {
+    border-radius: 5px;
+}
+/* Channel Feeds */
+.feedItemHeader-txJq98 {
+    border-bottom: none;
+}
+.interactiveCard-2iMtdk {
+    border: 2px solid #008c99;
+    box-shadow: none;
+}
+.card-3x20HF {
+    border-radius: 4px;
+    background-color: rgba(0, 140, 153, .3);
+}
+.loadingCard-3pIp9h {
+    background-color: rgba(0, 0, 0, .24);
+}
+.iconWrapper-3FqQ75 {
+    border-radius: 5px;
+    background-color: #008c99;
+}
+.icon-3gfzEo {
+    color: var(--header-primary);
+}
+.iconContainer-2R-3M1 {
+    border-radius: 5px;
+    background-color: #008c99;
+    color: white;
+}
+.container-3HMTms {
+    border-radius: 4px;
+}
+.container-3HMTms:hover {
+    background-color: rgba(0, 0, 0, .2);
+}
+/* Active Thread List */
+.header-3cSJjT {
+    background-color: transparent;
+}
+.container-3GP6AV {
+    background-color: transparent;
+    border-radius: 8px;
+}
+/* More Active Threads Box */
+.popout-TdhJ6Z {
+    background-color: black;
+}
+.more-2c3Z-T {
+    border-top: none;
+    color: gold;
+}
+.root-g14mjS.modal-ZdazA8 {
+    background-color: transparent;
+    background-attachment: fixed;
+    background-image: linear-gradient(to bottom left, #454545 21%, #000000 100%);
+}
+
+.container-18GwIk {
+    background-color: transparent;
+    background-attachment: fixed;
+    background-image: linear-gradient(to bottom left, #454545 21%, #000000 100%);
+}
+
+.header-3_zmOb {
+    background-color: transparent;
+}
+
+.icon-2Zyj6B {
+	background-color: #008c99;
+	border-radius: 5px;
+}
+
+.reactionBtn-3I19bq.forceShowLook-1zmTr- {
+    border-radius: 5px;
+    background-color: #008c99;
+    border: 2px solid transparent;
+}
+
+.reactionBtn-3I19bq.forceShowLook-1zmTr-:hover {
+    background-color: rgba(0, 140, 153, .7);
+    border-color: #008c99;
+}
+
+.icon-1q31jb,
+.reactionBtn-3I19bq {
+	color: white !important;
+}
+
+.row-1qtctT:hover {
+	background-color: #008c99;
+	color: white;
+}
+
+.row-1qtctT {
+	border-radius: 4px;
+	color: white;
+}
+
+.emptyStateContainer-xWOMPJ {
+	background-color: transparent;
 }
