Even more hidden new classes

--- a/My_Theme_Collection/NewAkameGaKill.theme.css
+++ b/My_Theme_Collection/NewAkameGaKill.theme.css
@@ -2325,6 +2325,7 @@
 .textBadge-1fdDPJ[style*="background-color:"] {
     background-color: #912 !important;
     border-radius: 4px;
+    color: white;
 }
 
 /* Active Post */
@@ -2544,6 +2545,223 @@
 
 .emptyStateContainer-xWOMPJ {
 	background-color: transparent;
+}
+
+/* Newest Hidden Classes */
+.container-3rZ3XA {
+    background-color: rgba(0,0,0,.2);
+}
+
+.showMore-22xKD3 {
+    color: gold;
+}
+
+.header-1sd0RU,
+.contentContainer-BWAau5 {
+    background-color: transparent;
+}
+
+.card-8UsK4b {
+    background-color: rgba(0,0,0,.2);
+    border-radius: 4px;
+    border: 2px solid rgba(0,0,0,.2);
+}
+
+.card-8UsK4b:hover {
+    background-color: rgba(0,0,0,.5);
+    border-radius: 4px;
+    border: 2px solid rgba(0,0,0,.5);
+}
+
+.container-3EBHNg {
+    border-bottom: none;
+}
+
+.interactiveRow-ALfmDn:hover {
+    background-color: rgba(0,0,0,.3);
+}
+
+.divider-2zyEHJ {
+    background-color: transparent;
+}
+
+.channelContainer-7uiQGJ {
+    color: white;
+}
+
+.rsvpCount-iCkObl {
+    background-color: rgba(0,0,0,.6);
+    border-radius: 4px;
+}
+
+.tierInfoContainer-3o77tj,
+.subscriptionPerks-17BiNa {
+    background-color: rgba(0,0,0,.5);
+}
+
+.roleMessagePreview-NUi2Ri {
+    background-color: transparent;
+    border: none;
+}
+
+.container-2O1UgZ {
+    background-color: black;
+    border: none;
+}
+
+.item-1BCeuB,
+.emoji-20i0XK {
+    color: white;
+}
+
+.item-1BCeuB {
+    border: 1px solid transparent;
+}
+
+.text-md-semibold-3xVVGu[style*="color:"] {
+    color: white !important;
+}
+
+.focused-qp-W9B, 
+.item-1BCeuB:hover:not(.disabled-Mmpvl7) {
+    background-color: rgba(255, 255, 255, .4);
+    border: 1px solid white;
+    color: white;
+}
+
+.clear-3MzXUl[style*="color:"],
+.tagsButton-4pwOKH .tagsButtonInner-2pvSm1 {
+    color: gold !important;
+}
+
+.closeIcon-3xe5xL, 
+.mediaIcon-3-Zrn7,
+.clearIcon-TMIIUa {
+    color: white !important;
+}
+
+.container-cH6QoY {
+    background-color: rgba(0,0,0,.3);
+}
+
+.callContainer-BGIngG,
+.scroller-35tvpe,
+.container-3r7mfc,
+.participants-3hk3ND {
+    background-color: transparent;
+}
+
+.divider-vv_iHh {
+    border-bottom: none;
+}
+
+#app-mount .tileContainer-Os085F {
+    background-color: rgba(0,0,0,.2);
+}
+
+.auto-1QyTTa::-webkit-scrollbar-corner {
+    background-color: transparent;
+}
+
+.auto-1QyTTa::-webkit-scrollbar-thumb {
+    background-color: black;
+}
+
+.auto-1QyTTa::-webkit-scrollbar-thumb, 
+.auto-1QyTTa::-webkit-scrollbar-track {
+    border: none;
+}
+
+.auto-1QyTTa::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+.channelName-3KPsGw[style*="color:"], 
+.subtitle-3PyFgf[style*="color:"] {
+    color: gold !important;
+}
+
+#app-mount .optionContainer-yOpaLq { 
+    background: rgba(0,0,0,.15);
+    border-radius: 4px;
+}
+
+
+.descriptionBox-SKGNgB {
+    background-color: transparent;
+    border-radius: 3px;
+}
+
+.channelIcon-QyaRxN {
+    color: white;
+}
+
+.pinIcon-zVODC5 {
+    background-color: black;
+}
+
+.theme-dark .searchBox-pyIJJj {
+    background-color: transparent;
+    box-shadow: none;
+}
+
+.searchBox-pyIJJj:focus, .searchBox-pyIJJj:focus-within {
+    border-color: rgba(255, 255, 255, .4);
+}
+
+.categoryPill-1zjNrr .categoryLabel-2m4AT- {
+    color: white;
+}
+
+.categoryPill-1zjNrr:hover:not(.selected-bLcqYK) {
+    background-color: rgba(0, 0, 0, .3);
+}
+
+.categoryPill-1zjNrr.selected-bLcqYK {
+    background-color: black;
+}
+
+.scroller-RfJjkV,
+.divider-3jU7zr {
+    background-color: transparent;
+}
+
+.container-1wv6C6 {
+    background-color: rgba(0, 0, 0, .3);
+}
+
+.content-2hZxGK a {
+    color: gold;
+}
+
+.checkboxContainer-yVbwWS,
+.banReasonOtherClickable-8EKPlQ {
+    background-color: rgba(0,0,0,.2) !important;
+}
+
+.banReasonOtherClickable-8EKPlQ {
+    color: white;
+}
+
+.theme-dark .item-2OyinQ {
+    border-color: transparent;
+}
+
+.selectorButton-1EQtQx {
+    background: rgba(0,0,0,.2);
+}
+
+.selectorButton-1EQtQx:hover {
+    background-color: rgba(0,0,0,.6);
+}
+
+.selectorButtonSelected-1VZ6hz {
+    background-color: black;
+}
+
+.sidebarCard-1Gn1ch {
+    background-color: rgba(0, 0, 0, .3);
+    border: none;
 }
 
 /* Main Color */
