--- a/My_Theme_Collection/NewRemTheme.theme.css
+++ b/My_Theme_Collection/NewRemTheme.theme.css
@@ -2376,6 +2376,7 @@
 .textBadge-1fdDPJ[style*="background-color:"] {
     background-color: #61A5D8 !important;
     border-radius: 4px;
+    color: white;
 }
 
 /* Active Post */
