More New Classes Coming Through

--- a/My_Theme_Collection/BubbleThemev2.theme.css
+++ b/My_Theme_Collection/BubbleThemev2.theme.css
@@ -1851,10 +1851,7 @@
     font-size: 15px;
 }
 
-.container-2O1UgZ {
-    background-color: rgba(0,0,0,.3);
-    border: none;
-}
+
 
 .tag-15nL6B {
     color: white;
@@ -3054,4 +3051,85 @@
 .sidebarCard-1Gn1ch {
     background-color: rgba(0, 0, 0, .3);
     border: none;
+}
+
+.valuePropContainer-WkXrIU {
+    background-color: rgba(0,0,0,.5);
+    border-radius: 4px;
+}
+
+.valuePropIconContainer-1WLjVd {
+    background-color: darkblue;
+    border-radius: 20px;
+    color: white;
+}
+
+.modal-1BeEFO a {
+    color: #76AAD9;
+    font-weight: 600;
+}
+  
+.entryIcon-2bcrKV, 
+.entryInner-1tOOER {
+    color: white;
+}
+  
+.text-xs-medium-2LRpEj[style*="color:"] {
+    color: white !important;
+}
+  
+.entryInner-1tOOER a {
+    color: #76AAD9;
+    font-weight: 600;
+}
+  
+.scopes-uCLYQv {
+    border-bottom: none;
+}
+  
+.getXboxApp-1kBRKG {
+    background: rgba(0, 0, 0, .6);
+}
+  
+.getXboxApp-1kBRKG a {
+    color: #76AAD9;
+    font-weight: 800;
+}
+  
+.container-1jn5D- {
+        background: rgba(0,0,0,.2);
+}
+
+.member-48YF_l, 
+.members-3WRCEx {
+    background-color: transparent;
+}
+
+.container-3arpDl {
+    background-color: rgba(0,0,0,.4);
+    border: none;
+    border-radius: 4px;
+}
+
+.container-3arpDl .guidelines-jQLwyH a {
+    color: #76AAD9;
+}
+
+.descriptionContainer-2ylKGk {
+    background-color: transparent;
+    border-radius: 4px;
+}
+  
+  
+.chatHeaderBar-2fUORh {
+  background-color: transparent;
+}
+  
+.theme-dark .tooltipBrand-20XsMA {
+    color: white;
+    background-color: darkblue;
+}
+  
+.theme-dark .tooltipBrand-20XsMA .tooltipPointer-3L49xb {
+  border-top-color: darkblue;
 }
