--- a/My_Theme_Collection/NewRemTheme.theme.css
+++ b/My_Theme_Collection/NewRemTheme.theme.css
@@ -2599,6 +2599,134 @@
 	background-color: transparent;
 }
 
+.valuePropContainer-WkXrIU {
+    background-color: rgba(0,0,0,.5);
+    border-radius: 4px;
+}
+
+.valuePropIconContainer-1WLjVd {
+    background-color: #61A5D8;
+    border-radius: 20px;
+    color: white;
+}
+
+.card-8UsK4b {
+    background-color: rgba(0,0,0,.2);
+    border-radius: 4px;
+    border: 2px solid rgba(0,0,0,.2);
+}
+
+.card-8UsK4b:hover {
+    background-color: rgba(0,0,0,.5);
+    border-radius: 4px;
+    border: 2px solid rgba(0,0,0,.5);
+}
+
+.modal-1BeEFO a {
+    color: #94CEE6;
+    font-weight: 600;
+}
+  
+.entryIcon-2bcrKV, 
+.entryInner-1tOOER {
+    color: white;
+}
+  
+.text-xs-medium-2LRpEj[style*="color:"] {
+    color: white !important;
+}
+  
+.entryInner-1tOOER a {
+    color: #94CEE6;
+    font-weight: 600;
+}
+  
+.scopes-uCLYQv {
+    border-bottom: none;
+}
+  
+.getXboxApp-1kBRKG {
+    background: rgba(0, 0, 0, .6);
+}
+  
+.getXboxApp-1kBRKG a {
+    color: #94CEE6;
+    font-weight: 800;
+}
+  
+.container-1jn5D- {
+        background: rgba(0,0,0,.2);
+}
+
+.header-1sd0RU {
+    background-color: transparent;
+}
+
+.member-48YF_l, 
+.members-3WRCEx {
+    background-color: transparent;
+}
+
+.container-2O1UgZ {
+    background-color:  black;
+    border: none;
+}
+
+.item-1BCeuB,
+.emoji-20i0XK {
+    color: white;
+}
+
+.item-1BCeuB {
+    border: 1px solid transparent;
+}
+
+.focused-qp-W9B, 
+.item-1BCeuB:hover:not(.disabled-Mmpvl7) {
+    background-color: rgba(255, 255, 255, .4);
+    border: 1px solid white;
+    color: white;
+}
+
+.container-3arpDl {
+    background-color: rgba(0,0,0,.4);
+    border: none;
+    border-radius: 4px;
+}
+
+.container-3arpDl .guidelines-jQLwyH a {
+    color: #94CEE6;
+}
+
+.descriptionContainer-2ylKGk {
+    background-color: transparent;
+    border-radius: 4px;
+}
+  
+  
+.chatHeaderBar-2fUORh {
+  background-color: transparent;
+}
+  
+.theme-dark .tooltipBrand-20XsMA {
+    color: white;
+    background-color: #61A5D8;
+}
+  
+.theme-dark .tooltipBrand-20XsMA .tooltipPointer-3L49xb {
+  border-top-color: #61A5D8;
+}
+
+
+
+
+
+
+
+
+
+
+
 /* Main Color */
 .main-color {color: #61A5D8;}
 
