--- a/My_Theme_Collection/NewBNHA.theme.css
+++ b/My_Theme_Collection/NewBNHA.theme.css
@@ -2695,6 +2695,91 @@
     border: none;
 }
 
+.valuePropContainer-WkXrIU {
+    background-color: rgba(0,0,0,.5);
+    border-radius: 4px;
+}
+
+.valuePropIconContainer-1WLjVd {
+    background-color: #2AB;
+    border-radius: 20px;
+    color: white;
+}
+
+.modal-1BeEFO a {
+    color: #ffd35b;
+    font-weight: 600;
+}
+  
+.entryIcon-2bcrKV, 
+.entryInner-1tOOER {
+    color: white;
+}
+  
+.text-xs-medium-2LRpEj[style*="color:"] {
+    color: white !important;
+}
+  
+.entryInner-1tOOER a {
+    color: #ffd35b;
+    font-weight: 600;
+}
+  
+.scopes-uCLYQv {
+    border-bottom: none;
+}
+  
+.getXboxApp-1kBRKG {
+    background: rgba(0, 0, 0, .6);
+}
+  
+.getXboxApp-1kBRKG a {
+    color: #ffd35b;
+    font-weight: 800;
+}
+  
+.container-1jn5D- {
+        background: rgba(0,0,0,.2);
+}
+
+.member-48YF_l, 
+.members-3WRCEx {
+    background-color: transparent;
+}
+
+.container-3arpDl {
+    background-color: rgba(0,0,0,.4);
+    border: none;
+    border-radius: 4px;
+}
+
+.container-3arpDl .guidelines-jQLwyH a {
+    color: #ffd35b;
+}
+
+.descriptionContainer-2ylKGk {
+    background-color: transparent;
+    border-radius: 4px;
+}
+  
+  
+.chatHeaderBar-2fUORh {
+  background-color: transparent;
+}
+  
+.theme-dark .tooltipBrand-20XsMA {
+    color: white;
+    background-color: #2AB;
+}
+  
+.theme-dark .tooltipBrand-20XsMA .tooltipPointer-3L49xb {
+  border-top-color: #2AB;
+}
+
+
+
+
+
 /* Main Color */
 .main-color{color: #2AB;}
 
